--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip install pandas numpy scikit-learn matplotlib seaborn
-pip install streamlit
-pip install secure-smtplib
-pip install supabase
-or 
-pip install psycopg2-binary
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
+streamlit
